[project]
name = "doc2string"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "ffmpeg>=1.4",
    "markitdown[all]>=0.1.0",
    "python-multipart>=0.0.20",
    "tika>=2.6.0",
    "tika-client>=0.9.0",
    "uvicorn[standard]>=0.34.0"
]

